[tool.poetry]
name = "telegram-userbot-parser"
version = "0.1.0"
description = ""
authors = ["Eldar Mametov <e.mametov@innopolis.university>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Pyrogram = "^2.0.106"
pydantic = "^2.7.4"
httpx = "^0.27.0"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
