[tool.poetry]
name = "telegram-userbot-parser"
version = "0.1.0"
description = ""
authors = ["Eldar Mametov <e.mametov@innopolis.university>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
httpx = "^0.27.0"
pre-commit = "^3.6.2"
pydantic = "^2.7.4"
Pyrogram = "^2.0.106"
python-dotenv = "^1.0.1"
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
